Fixed scrolling on mobile phones

--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -76,6 +76,7 @@ a {
     padding: 0;
     max-width: 100%;
     overflow: scroll;
+    overflow-y: hidden;
     table {
       padding: 1em .5em 0;
       min-width: 800px;
